<?xml version="1.0" encoding="utf-8"?>
<!--
    Smart Solar Microgrid Trading System
    Prosumer Bottom Navigation Menu

    Member 2 - Bottom nav items for solar prosumer role:
    Dashboard, Bookings, Map, Profile.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_bookings"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_bookings" />

    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />

</menu>
